syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/trueone/beetest/internal/app/secret/presenter/http/grpc/proto";

message SecretRequest {
    string secret = 1;
    int64 expireAfterViews = 2;
    int64 expireAfter = 3;
}

message HashRequest {
    string hash = 1;
}

message SecretResponse {
    string hash = 1;
    string secretText = 2;
    google.protobuf.Timestamp createdAt = 3;
    google.protobuf.Timestamp expiresAt = 4;
    int64 remainingViews = 5;
}

service Secret {
    rpc Create (SecretRequest) returns (SecretResponse) {}
    rpc Get (HashRequest) returns (SecretResponse) {}
}